Fix adding table relationships in Query Designer using drag&drop (regression since 3.0)

Summary:
FIXED-IN:3.0.1
BUG:376970
T5473

Note: the code in form view has been updated too but because (like in 2.9.x) autofields are disabled it's still not functional.

Test Plan: Create a new query design, insert 2 or more tables, add relation using drag and drop, add fields to the query. Move to the data view and SQL view. Expected: correct data result, SQL is present with WHERE condition.

Reviewers: piggz

Reviewed By: piggz

Tags: #kexi

Differential Revision: https://phabricator.kde.org/D4913