src/widget/relations/KexiRelationsTableContainer_p.cpp
@@ -20,10 +20,11 @@
 
 #include "KexiRelationsTableContainer_p.h"
 #include "KexiRelationsScrollArea.h"
-//! @todo KEXI3 Port #include <kexidragobjects.h>
+#include <kexidragobjects.h>
 #include <kexiutils/utils.h>
 
 #include <KDbTableSchema>
+#include <KDbTableOrQuerySchema>
 #include <KDbUtils>
 
 #include <QLabel>
@@ -212,9 +213,6 @@ void KexiRelationsTableFieldList::dragEnterEvent(QDragEnterEvent* event)
 
 void KexiRelationsTableFieldList::dragMoveEvent(QDragMoveEvent* event)
 {
-//! @todo KEXI3 Port kexidragobjects.cpp
-    Q_UNUSED(event);
-#if 0
     QModelIndex receiver = indexAt(event->pos());
     if (!receiver.isValid() || !KexiFieldDrag::canDecode(event))
         return;
@@ -250,15 +248,10 @@ void KexiRelationsTableFieldList::dragMoveEvent(QDragMoveEvent* event)
     //qDebug() << "Source:" << srcTable << "Dest:" << schema()->name();
     if (!srcField.trimmed().startsWith('*') && !f.startsWith('*'))
         event->acceptProposedAction();
-#endif
 }
 
 void KexiRelationsTableFieldList::dropEvent(QDropEvent *event)
 {
-    //qDebug();
-//! @todo KEXI3 Port kexidragobjects.cpp
-    Q_UNUSED(event);
-#if 0
     QModelIndex idx = indexAt(event->pos());
 
     if (!idx.isValid() || !KexiFieldDrag::canDecode(event)) {
@@ -296,7 +289,6 @@ void KexiRelationsTableFieldList::dropEvent(QDropEvent *event)
 
     //qDebug() << srcTable << ":" << srcField << schema()->name() << ":" << rcvField;
     event->accept();
-#endif
 }
 
 void KexiRelationsTableFieldList::slotContentsMoving()
